# UserChat

./: CMakeLists.txt  authorization.cpp  authorization.hpp  client.cpp  client.hpp  finddir.cpp  finddir.hpp  finddir.ui  findfile.cpp  findfile.hpp  findfile.ui  images_sources.qrc  newchatline.cpp  newchatline.hpp  onlyacceptlineedit.cpp  onlyacceptlineedit.hpp  start.cpp  window.cpp  window.hpp  window.ui
